# plutus

./: Dockerfile  app.py  config.py  connectors.py  pyproject.toml  requirements.txt  test.ipynb  trades_processor.py
plutus/: __init__.py  config.py  db.py  trades_processor.py
plutus/static/: base.css
plutus/templates/: base.html  index.html  upload.html
plutus_archive/: README.md
plutus_archive/plutus/: __init__.py
plutus_archive/templates/: budget.html  crypto.html  taxes.html
static/: crypto.css
templates/: assets.html  equity.html  index.html
