[tool.poetry]
name = "plutus"
version = "1.0.0"
description = "A Flask application for processing trades"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "plutus"}]

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
pandas = "^2.2.3"
google-cloud-bigquery = "^3.30.0"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
